--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.5",
     "openai": "^4.56.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
