--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.16.7",
     "@pinecone-database/pinecone": "^3.0.0",
     "@vercel/analytics": "^1.3.1",
+    "axios": "^1.7.4",
+    "cheerio": "^1.0.0",
     "firebase": "^10.13.0",
     "next": "14.2.5",
     "openai": "^4.56.0",
